--- a/src/main/resources/static/config.json
+++ b/src/main/resources/static/config.json
@@ -1,8 +1,8 @@
 {
 	"key": "2ae72bc8-61c2-410a-b351-92faa788363c",
 	"metaData": {
-		"icon": "images/icon.png",
-		"iconSmall": "images/icon_small.png"
+		"icon": "images/nicolasIcon.png",
+		"iconSmall": "images/nicolasIcon.png"
 	},
 	"type": "RESTDECISION",
 	"lang": {
